Fix horizontal scroll on tablet width

--- a/source/sass/blocks/input.scss
+++ b/source/sass/blocks/input.scss
@@ -56,7 +56,6 @@
 }
 
 .input {
-  position: relative;
   width: 100%;
   padding: 13px 14px;
   margin-left: 13px;
