--- a/source/sass/blocks/main-form.scss
+++ b/source/sass/blocks/main-form.scss
@@ -97,6 +97,8 @@
 }
 
 .main-form__list-item {
+  margin-bottom: 20px;
+
   @media (min-width: 1440px) {
     min-width: 221px;
   }
@@ -131,6 +133,7 @@
   border-bottom: 1px solid var(--dark-grey);
   padding: 25px 0;
   margin-bottom: 0;
+  box-sizing: border-box;
 
   @media (min-width: 768px) {
     margin-top: 72px;
